fix dt/dd spacing

--- a/themes/brahier/assets/sass/custom/_brahier.scss
+++ b/themes/brahier/assets/sass/custom/_brahier.scss
@@ -82,3 +82,7 @@ ul.buttonlist li {
     padding-left: 0;
     padding-bottom: .5em;
 }
+
+dl dt {
+    margin: 1em 0 0;
+}
